Tentando concertar bug no travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ language:
       - ruby
 
 before_script:
-	- rake db:migrate RAILS_ENV=test
   - gem install rspec rspec-rails simplecov
 
 script:
         - bundle exec rspec spec
-
 rvm:
   - 2.2.0
 
@@ -18,4 +16,5 @@ notifications:
 
 branches:
   only:
-  - homologacao
+  - Travis
+
