--- a/AbasteceAqui/Gemfile
+++ b/AbasteceAqui/Gemfile
@@ -70,4 +70,4 @@ gem 'simplecov', :require => false, :group => :test
   gem 'metric_fu'
 
 # Cucumber
-gem 'cucumber-rails'
+gem 'cucumber-rails', :require => false
