--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_script:
  - bundle install
 
 script:
-        - bundle exec rspec spec
+  - rake db:migrate RAILS_ENV=test
+  - bundle exec rspec spec
 rvm:
   - 2.3.0
 
