--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,28 @@ language:
       - ruby
 
 before_script:
-	- rake db:migrate RAILS_ENV=test
-  - gem install rspec rspec-rails simplecov
+ - cd AbasteceAqui/
+ - gem install rspec rspec-rails simplecov
+ - bundle install
 
 script:
-        - bundle exec rspec spec
-
+  - rake db:migrate RAILS_ENV=test
+  - bundle exec rspec spec
 rvm:
-  - 2.2.0
+  - 2.3.0
 
 notifications:
   email:
     recipients:
       - jonatas_lenon@hotmail.com.br
+      - joaaogui@gmail.com
+      - marceloabk@hotmail.com
+      - victor.hmfd@gmail.com
+      - thiagolima.unb@gmail.com
+      - marco.antoniorl10@gmail.com
+      - andersoonn.ams@gmail.com
+      - ruandonato.net@gmail.com
+      - ygor.tgaleno@gmail.com
 
 branches:
   only:
